<resources>
    <string name="app_name">farmorstestapp</string>

    <string name="si_email_hint">Email</string>
    <string name="si_password_hint">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="textViewLogin">Already have an account? Login</string>

    <string name="su_name_hint">Full name</string>
    <string name="su_email_hint">Email</string>
    <string name="su_password_hint">Password</string>
    <string name="su_passwordconf_hint">Confirm Password</string>
    <string name="button_signup">Sign Up</string>
    <string name="textViewSignup">Don\'t have account? Sign Up</string>

    <string name="nav_username">Display Name</string>
    <string name="nav_email">user@mail.com</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>

