<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".signup">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:id="@+id/imageView2" android:layout_marginTop="101dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/si_email_hint"
            android:textSize="16sp"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:id="@+id/email_input"
            android:layout_marginTop="276dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/si_password_hint"
            android:textSize="16sp"
            android:id="@+id/password_input" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="267dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:id="@+id/progressBar" android:layout_marginBottom="53dp" android:layout_marginLeft="182dp"/>
    <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp" android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="185dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button_signin">

            <TextView
                    android:text="@string/button_signin"
                    android:layout_width="wrap_content"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="121dp"
            android:layout_marginTop="12dp"
            android:text="@string/textViewSignup"/>
</RelativeLayout>